| Bug #26356 | uninitialised data sent from TAMPER_ORD to DIHNDBTAMPER | ||
|---|---|---|---|
| Submitted: | 14 Feb 2007 4:50 | Modified: | 21 Feb 2007 15:15 |
| Reporter: | Stewart Smith | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.0, 5.1 | OS: | |
| Assigned to: | Stewart Smith | CPU Architecture: | Any |
[14 Feb 2007 4:50]
Stewart Smith
[14 Feb 2007 4:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/19830 ChangeSet@1.2410, 2007-02-14 15:51:16+11:00, stewart@willster.(none) +1 -0 BUG#26356 uninitialised data sent from TAMPER_ORD to DIHNDBTAMPER Don't send uninit data in TAMPER_ORD to DIHNDBTAMPER Even though this data is unused from the CMVMI (mgmd) signal, we shouldn't be doing stuff with uninited data.
[14 Feb 2007 10:50]
Stewart Smith
pushed to 5.0-ndb and 5.1-ndb
