BUG#26356  	uninitialised data sent from TAMPER_ORD to DIHNDBTAMPER

Don't send uninit data in TAMPER_ORD to DIHNDBTAMPER

Even though this data is unused from the CMVMI (mgmd) signal,
we shouldn't be doing stuff with uninited data.